# poly

./: .clang-format  .gitignore  .mdformat.toml  Doxyfile  LICENSE  README.md  docs.md  meson.build  meson.options  quickstart.md
.github/workflows/: build-tests.yml  main.yml  test-macos.yml  test-ubuntu  test-windows.yml
include/: poly.hpp
include/poly/: alloc.hpp  always_false.hpp  config.hpp  function.hpp  fwd.hpp  interface.hpp  interface_method.hpp  interface_method_entry.hpp  interface_property.hpp  interface_property_entry.hpp  lib.cpp  method.hpp  method_table.hpp  object.hpp  object_method.hpp  object_property.hpp  property.hpp  property_table.hpp  ptable.hpp  storage.hpp  struct.hpp  traits.hpp  type_list.hpp  vtable.hpp
include/poly/storage/: heap_storage.hpp  local_storage.hpp  ref_storage.hpp  sbo_storage.hpp  variant_storage.hpp
tests/: ebo.cpp  function.cpp  interface.cpp  methods.cpp  properties.cpp  size.cpp  storage.cpp
