option( 'macros', 
        type : 'boolean', 
        value : true, 
        description : 'Enable the usage of macros provided by poly')
option( 'injection', 
        type : 'boolean', 
        value : true, 
        description : 'Enable method and property injection')
option( 'method_injection', 
        type : 'boolean', 
        value : true, 
        description : 'Enable method injection')
option( 'property_injection', 
        type : 'boolean', 
        value : true, 
        description : 'Enable property injection')
option( 'default_property_access', 
        type: 'boolean', 
        value: true, 
        description: 'Enable the default implementation of get() and set() for properties.')
option( 'default_extend', 
        type: 'boolean', 
        value: true, 
        description: 'Enable the default implementation of extend().')
